2014-10-08  David B. Lamkins  <david@lamkins.net>

	* menu.c (open_object_cb): Handle deactivated selection in Open
	Object dialog.

	* menu.c (open_object_cb): Previous patch was wrong. This one
	captures current selection in Open Object dialog.

	* menu.c (open_object_cb): Preselect first item in Open Object
	dialog so OK button will work.

	* edit.c (trim_length): Fix console warnings emitted if a function
	opened for editing contains empty lines.

2014-10-07  David B. Lamkins  <david@lamkins.net>

	* edit.h (): Don't lose unsaved edit windows when closing transcript.

	* aplwrap.h (): Don't lose unsaved edit windows when closing
	transcript.

	* edit.c (check_modified, message_dialog): Don't lose unsaved edit
	windows when closing transcript.

	* aplwrap.c (main): Don't lose unsaved edit windows when closing
	transcript.

	* apl.c (aplwrap_quit): Don't lose unsaved edit windows when
	closing transcript.

	* complete.c (is_extra_break_char, lookup_callback, complete):
	Allow additional break characters interior to completion
	identifiers.

	* edit.h (): Fix crash that may occur while closing an edit window.

	* edit.c (edit_close, set_status_line): Fix crash that may occur
	while closing an edit window.

	* edit.c (message_dialog): Fix compiler warning.

2014-10-06  David B. Lamkins  <david@lamkins.net>

	* edit.c (edit_save_object_cb): Reformat the line number report on
	function definition errors.

2014-10-05  David B. Lamkins  <david@lamkins.net>

	* edit.c (message_dialog, edit_save_object_cb, edit_file): Report
	file import error.

	* aplwrap.c (key_press_event): Don't need to explicitly handle
	accelerator keys.

	* menu.c (ps_dialog_cb, set_pstat_value, ps_button_cb)
	(ps_toggle_cb): Consolidate most pstat code into one file.

	* pstat.h (): Consolidate most pstat code into one file.

	* pstat.c (ps_dialog_cb, set_pstat_value, ps_button_cb)
	(ps_toggle_cb): Consolidate most pstat code into one file.

	* edit.c (edit_close, edit_file): Minor code cleanup.
