@@ -1,0 +1,10 @@
+#ifndef HELP_H
+#define HELP_H
+
+#include <gtk/gtk.h>
+
+void help_menu (GtkWidget     *vbox,
+                GtkAccelGroup *accel_group,
+                GtkWidget     *menubar);
+
+#endif
